--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,18 +1,24 @@
+events { 
+	worker_connections  1024;
+}
 
 http {
-    # Configuration specific to HTTP and affecting all virtual servers  
     server {
         listen					443 ssl;
 		server_name				kmahdi.42.fr;
-		index 					index.php index.html index.htm;
-		root 					/var/www/wordpress;
-		
+		root 					/var/www/html/wordpress;
+		index 					index.php;
+		autoindex				on;
 		ssl_protocols			TLSv1.2 TLSv1.3;
 		ssl_certificate			/etc/nginx/ssl/inception.crt;
 		ssl_certificate_key 	/etc/nginx/ssl/inception.key;
+
 		location / {
-			try_files $uri $uri/ =404;
-			fastcgi_pass wordpress:9000; # Comment renvoyer les requetes php sur le port 9000
+			try_files 			$uri $uri/ =404;
 		}
-	} 
+		location ~\.php$ {
+			try_files 			$uri $uri/ =404;
+			fastcgi_pass wordpress:9000;
+		}
+	}
 }
