problem with wp host

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,14 +1,24 @@
 DOMAIN_NAME=kmahdi.42.fr
+
 # certificates
 CERTS_=./XXXXXXXXX
 
-# Set MySQL environment variables
-MYSQL_ROOT_PASSWORD="RootPass"
-MYSQL_USER="userName"
-MYSQL_PASSWORD="userPass"
-MYSQL_DATABASE="db"
+MYSQL_DATABASE=DataBase
+MYSQL_ROOT_PASSWORD=123123
+MYSQL_USER=user
+MYSQL_PASSWORD=123123
 
+WORDPRESS_DB_NAME=dbW
+WORDPRESS_DB_PASSWORD=dbpass
+WORDPRESS_DB_USER=user1
 WORDPRESS_DB_HOST=kmahdi.42.fr
-WORDPRESS_DB_NAME=woedPess
-WORDPRESS_DB_PASSWORD=123111
-WORDPRESS_TABLE_PREFIX=212
+
+WORDPRESS_ADMIN_USER=khadija
+WORDPRESS_ADMIN_PASSWORD=123123
+
+WORDPRESS_URL==localhost
+WORDPRESS_TITLE=Wordpress site title
+WORDPRESS_ADMIN_EMAIL=kmahdi@student.1337.ma
+
+WORDPRESS_USER1_NAME=user2
+WORDPRESS_USER1_PASSWORD=passuser2
