--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,25 +1,44 @@
-FROM debian:buster
+# Base image
+FROM debian:bullseye
 
-RUN apt-get update && apt-get install -y php7.3 \
-php7.3-fpm php7.3-mysql mariadb-client \
-nginx curl
+# Update and upgrade packages
+RUN apt-get update -y && apt-get upgrade -y && apt-get install -y php php-fpm php-mysql mariadb-client wget
 
-# Downloading WP-CLI
+WORKDIR  /var/www/html
 
-RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar
+# Install WordPress
+RUN wget https://wordpress.org/wordpress-6.3.1.tar.gz -P /var/www/html
 
-# Making the wp-cli.phar file executable and moving it to the /usr/local/bin/ path
-# and renaming it 'wp' to use that as the command and not 'wp-cli.phar'
-RUN chmod +x wp-cli.phar && mv wp-cli.phar /usr/local/bin/wp
+RUN tar -xzf wordpress-6.3.1.tar.gz
+RUN mv ./wordpress/wp-config-sample.php ./wordpress/wp-config.php
+RUN mv ./wordpress/* . 
+RUN rm -rf wordpress-6.3.1.tar.gz wordpress 
+RUN chown -R root:root /var/www/html
 
-COPY ./tools/script.sh /script.sh
+COPY ./conf/www.conf /etc/php/7.4/fpm/pool.d/www.conf
 
-COPY ./tools/www.conf /etc/php/7.3/fpm/pool.d/
+# Install WordPress CLI
+RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+    && chmod +x wp-cli.phar \
+    && mv wp-cli.phar /usr/local/bin/wp
 
-RUN chmod +x script.sh
 
-RUN mkdir /run/php/
+# Copy script file
+COPY ./tools/script.sh /usr/bin/script.sh
 
-ENTRYPOINT ["sh", "script.sh"]
+# Make script executable
+RUN chmod +x /usr/bin/script.sh
 
-CMD ["php-fpm7.3", "-R", "-F"]
+# Move wp-config file
+
+# Expose port 9000 for PHP-FPM
+EXPOSE 9000
+
+RUN mkdir -p /run/php/
+
+# ENTRYPOINT [ "tail", "-f" ]
+# Set entrypoint to script
+ENTRYPOINT ["sh", "/usr/bin/script.sh"]
+
+# CMD for PHP-FPM
+CMD [ "php-fpm7.4",  "-F"]
