--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,96 +1,67 @@
-version: "3"
+version: '3.8'
+
 services:
-    mariadb:
-      container_name: mariadb
-      build: ./requirements/mariadb/
-      restart: always
-      environment:
-        - MYSQL_ROOT_PASSWOR=${MYSQL_ROOT_PASSWORD}
-        - MYSQL_DATABASE=${MYSQL_DATABASE}
-        - MYSQL_USER=${MYSQL_USER}
-        - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-      volumes:
-        - mariadb:/var/lib/mysql/
-      env_file:
-        - .env
-      networks:
-        - wordpress
-      init : true
-    wordpress:
-      container_name: wordpress
-      build: ./requirements/wordpress
-      volumes:
-        - wordpress:/var/www/html/wordpress
-      env_file:
-        - .env
-      networks:
-        - wordpress
-      depends_on:
-      - mariadb 
-      environment:
-        - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
-        - MYSQL_DATABASE=${MYSQL_DATABASE}
-        - MYSQL_USER=${MYSQL_USER}
-        - MYSQL_PASSWORD=${MYSQL_PASSWORD}
-        - WORDPRESS_DB_HOST=${WORDPRESS_DB_HOST}
-        - WORDPRESS_DB_NAME=${WORDPRESS_DB_NAME}
-        - WORDPRESS_DB_PASSWORD=${WORDPRESS_DB_PASSWORD}
-        - WORDPRESS_TABLE_PREFIX=${WORDPRESS_TABLE_PREFIX}
-      ports:
-        - 9000:9000
-      restart: always
-      init : true
-    nginx:
-      container_name: nginx
-      depends_on:
-        - wordpress
-      build: ./requirements/nginx/
-      networks:
-        - wordpress
-      ports:
-        - 443:443
-      env_file:
-        - .env
-      volumes:
-        - wordpress:/var/www/html/wordpress
-      restart: always
-      init : true
+  mariadb:
+    container_name: mariadb
+    networks:
+      - inception
+    build: 
+      context: requirements/mariadb
+      dockerfile: Dockerfile
+    env_file: .env
+    volumes:
+      - mariadb:/var/lib/mysql
+    restart: unless-stopped
+    expose:
+      - 3306
+
+  wordpress:
+    container_name: wordpress
+    env_file: .env
+    volumes:
+      - wordpress:/var/www/html
+    networks:
+      - inception
+    expose: 
+      - 9000
+    build: 
+      context: requirements/wordpress
+      dockerfile: Dockerfile
+    depends_on:
+      - mariadb
+    restart: on-failure
+
+
+  nginx:
+    container_name: nginx
+    volumes:
+      - wordpress:/var/www/html
+    networks:
+      - inception
+    depends_on:
+      - wordpress
+    build: 
+      context: requirements/nginx
+      dockerfile: Dockerfile
+    env_file: .env
+    ports:
+      - "443:443"
+    restart: on-failure 
+
+volumes:
+  wordpress:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/Users/kmahdi/data/wordpress'
+  mariadb:
+    driver: local
+    driver_opts:
+      type: 'none'
+      o: 'bind'
+      device: '/Users/kmahdi/data/mariadb'
 
 networks:
-  wordpress:
-      driver: bridge
-    
-# version: '3.8'
-
-# services:
-#     mariadb:
-#         container_name: mariadb
-#         build:	./requirements/mariadb
-#         ports:
-#             - 443:3306
-#         restart: always
-
-#     wrodpress:
-#         container_name: wrodpress
-#         build:	./requirements/wrodpress
-#         depends_on:
-#             - mariad
-#         ports:
-#             - 443:9000
-#         restart: always
-
-#     nginx:
-#         container_name: nginx
-#         build:	./requirements/nginx 
-#         ports:
-#             - 443:443
-#         depends_on:
-#             - wrodpress
-#         volumes:
-#             - ./websites:/usr/share/mging/html
-#         restart: always
-
-# networks:
-
-
-# volumes:
+  inception:
+    driver: bridge
