--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,24 +1,28 @@
-events { 
-	worker_connections  1024;
-}
+events {}
 
 http {
+    include /etc/nginx/mime.types;
     server {
-        listen					443 ssl;
-		server_name				kmahdi.42.fr;
-		root 					/var/www/html/wordpress;
-		index 					index.php;
-		autoindex				on;
-		ssl_protocols			TLSv1.2 TLSv1.3;
-		ssl_certificate			/etc/nginx/ssl/inception.crt;
-		ssl_certificate_key 	/etc/nginx/ssl/inception.key;
+        listen 443 ssl;
+        ssl_certificate /etc/nginx/ssl/inception.crt;
+        ssl_certificate_key /etc/nginx/ssl/inception.key;
+        ssl_protocols TLSv1.2 TLSv1.3;
 
-		location / {
-			try_files 			$uri $uri/ =404;
-		}
-		location ~\.php$ {
-			try_files 			$uri $uri/ =404;
-			fastcgi_pass wordpress:9000;
-		}
-	}
+        root /var/www/html;
+        server_name localhost;
+        index index.php index.html;
+
+        location / {
+            try_files $uri $uri/ =404;
+        }
+
+        location ~ \.php$ {
+            include snippets/fastcgi-php.conf;
+            fastcgi_pass wordpress:9000;
+        }
+
+        location ~ /\.ht {
+            deny all;
+        }
+    }
 }
