done with mandatory part

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,22 +3,23 @@ DOMAIN_NAME=kmahdi.42.fr
 # certificates
 CERTS_=./XXXXXXXXX
 
-MYSQL_DATABASE=DataBase
-MYSQL_ROOT_PASSWORD=123123
-MYSQL_USER=user
-MYSQL_PASSWORD=123123
+MARIA_DATABASE=wordpress
+MARIA_ROOT_PASSWORD=123123
+
+MARIA_USER=user
+MARIA_PASSWORD=123123
 
 WORDPRESS_DB_NAME=dbW
 WORDPRESS_DB_PASSWORD=dbpass
 WORDPRESS_DB_USER=user1
-WORDPRESS_DB_HOST=kmahdi.42.fr
 
 WORDPRESS_ADMIN_USER=khadija
 WORDPRESS_ADMIN_PASSWORD=123123
 
-WORDPRESS_URL==localhost
+WORDPRESS_URL=https://kmahdi.42.fr
 WORDPRESS_TITLE=Wordpress site title
 WORDPRESS_ADMIN_EMAIL=kmahdi@student.1337.ma
 
 WORDPRESS_USER1_NAME=user2
 WORDPRESS_USER1_PASSWORD=passuser2
+WORDPRESS_USER1_EMAIL=user1@email.com
