done with redis and start work on ftp

--- a/srcs/.env
+++ b/srcs/.env
@@ -23,3 +23,6 @@ WORDPRESS_ADMIN_EMAIL=kmahdi@student.1337.ma
 WORDPRESS_USER1_NAME=user2
 WORDPRESS_USER1_PASSWORD=passuser2
 WORDPRESS_USER1_EMAIL=user1@email.com
+
+FTP_USERNAME=ftpuser
+FTP_PASSWORD=password
