--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -6,6 +6,8 @@ RUN apt-get update -y && apt-get upgrade -y && apt-get install -y php php-fpm ph
 
 RUN apt-get install -y sendmail
 
+RUN apt install -y  redis-tools
+
 
 WORKDIR  /var/www/html
 
