--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -57,8 +57,11 @@ services:
         dockerfile: Dockerfile
       env_file: .env
       restart: on-failure
+      mem_limit: 1g
   ftp:
     container_name: ftp
+    volumes:
+      - wordpress:/var/www/html
     networks:
       - inception
     depends_on:
@@ -68,9 +71,40 @@ services:
       dockerfile: Dockerfile
     env_file: .env
     ports:
-      - "20:20"
       - "21:21"
     restart: on-failure
+
+  static_site:
+    build: 
+      context: requirements/bonus/static_site
+      dockerfile: Dockerfile
+    networks:
+      - inception
+    ports:
+      - "8000:8000"
+    restart: on-failure
+
+  adminer:
+    build: 
+      context: requirements/bonus/adminer
+      dockerfile: Dockerfile
+    networks:
+      - inception
+    ports:
+      - 80:80
+    restart: on-failure
+  
+  django:
+    build: 
+      context: requirements/bonus/django
+      dockerfile: Dockerfile
+    networks:
+      - inception
+    ports:
+      - "3000:3000"
+    restart: on-failure
+
+
 
 volumes:
   wordpress:
