--- a/srcs/requirements/bonus/redis/Dockerfile
+++ b/srcs/requirements/bonus/redis/Dockerfile
@@ -1,8 +1,14 @@
 FROM debian:bullseye
 
+# Update and upgrade packages
 RUN apt update -y && apt upgrade -y
 
-RUN  apt install -y redis-server && apt install -y  php-redis
+# Install Redis and PHP with Redis extension
+RUN apt install -y redis-server php-redis
 
+RUN apt-get install procps -y
 
-ENTRYPOINT [ "redis-server","--protected-mode","no","--bind","0.0.0.0" ]
+# Set ENTRYPOINT
+RUN service redis-server restart
+ENTRYPOINT ["redis-server", "--protected-mode", "no", "--bind", "0.0.0.0"]
+
