--- a/srcs/.env
+++ b/srcs/.env
@@ -24,5 +24,5 @@ WORDPRESS_USER1_NAME=user2
 WORDPRESS_USER1_PASSWORD=passuser2
 WORDPRESS_USER1_EMAIL=user1@email.com
 
-FTP_USERNAME=ftpuser
-FTP_PASSWORD=password
+FTP_USERNAME=user
+FTP_PASSWORD=123123
