--- a/srcs/requirements/bonus/ftp/Dockerfile
+++ b/srcs/requirements/bonus/ftp/Dockerfile
@@ -1,26 +1,23 @@
 FROM debian:bullseye
 
-RUN apt-get update 
+RUN apt update && apt upgrade -y 
 
-RUN apt-get -y update; \
-        apt-get -y upgrade; \
-        apt-get install vsftpd -y;
+RUN apt install -y iputils-ping vim vsftpd 
 
-# Copy vsftpd configuration file
+RUN apt install -y openssl
+
+RUN mkdir -p /etc/ssl
+
+RUN openssl req -x509 -nodes -newkey rsa:2048 -keyout /etc/ssl/private/vsftpd.pem -out /etc/ssl/private/vsftpd.pem -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=kmahdi.42.fr/UID=kmahdi"
+
+RUN mkdir -p /var/run/vsftpd/empty
+
 COPY ./conf/vsftpd.conf /etc/vsftpd.conf
 
-# Copy script to create FTP user
-COPY ./tools/script.sh /usr/local/bin/script.sh
+COPY ./tools/script.sh /home/script.sh
 
-# Make the script executable
-RUN chmod +x /usr/local/bin/script.sh
+RUN chmod +x /home/script.sh
 
-# Create directory for FTP access
-RUN mkdir -p /var/www/html
+RUN service vsftpd restart
 
-# Expose FTP port
-EXPOSE 20 21
-
-CMD ["sh", "./tools/script.sh"]
-
-ENTRYPOINT ["vsftpd", "/etc/vsftpd.conf"]
+ENTRYPOINT ["/home/script.sh" ] 
