--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -6,7 +6,7 @@ http {
         listen 443 ssl;
         ssl_certificate /etc/nginx/ssl/inception.crt;
         ssl_certificate_key /etc/nginx/ssl/inception.key;
-        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols TLSv1.2;
 
         root /var/www/html;
         server_name localhost;
@@ -19,10 +19,6 @@ http {
         location ~ \.php$ {
             include snippets/fastcgi-php.conf;
             fastcgi_pass wordpress:9000;
-        }
-
-        location ~ /\.ht {
-            deny all;
         }
     }
 }
